# GateGuardian_Server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  ok.json  pom.xml  render.yaml
migrations/: 20240111124911_init.down.sql  20240111124911_init.up.sql  20240203125849_lemons.down.sql  20240203125849_lemons.up.sql  20240331042030_vis.sql  20240331065354_regnot.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  shutdown.rs
src/main/java/com/gateguardian/gateguardianserver/: GateGuardianServerApplication.java
src/main/java/com/gateguardian/gateguardianserver/resident/controller/: ResidentApiController.java
src/main/java/com/gateguardian/gateguardianserver/resident/dto/: EventMemoryDto.java  ResidentDto.java  VisitorCredDto.java  VisitorDto.java
src/main/java/com/gateguardian/gateguardianserver/resident/model/: EventMemory.java  Resident.java  Visitor.java
src/main/java/com/gateguardian/gateguardianserver/resident/repository/: EventMemoryRepository.java  ResidentRepository.java  VisitorRepository.java
src/main/java/com/gateguardian/gateguardianserver/resident/service/: EventMemoryService.java  ResidentService.java  VisitorService.java
src/main/java/com/gateguardian/gateguardianserver/security/: SecurityDto.java
src/main/resources/: application.properties  application.yml
src/migrations/: 20240331041923_socusers.sql  20240331041947_ressec.sql  20240331070052_oopsreg.sql  20240331070332_oopsnot.sql
src/resident/: handlers.rs  mod.rs  model.rs  routes.rs  schema.rs
src/security/: handlers.rs  model.rs  routes.rs  schema.rs
src/test/java/com/gateguardian/gateguardianserver/: GateGuardianServerApplicationTests.java
src/user/: handlers.rs  mod.rs  model.rs  route.rs  routes.rs  schema.rs
(+17 files in other folders)
