[package]
name = "ggserver-in-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.3"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
jsonwebtoken = "9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.31"
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
