[package]
name = "ggserver-in-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.3"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.8.5"